--- a/src/App.css
+++ b/src/App.css
@@ -2,15 +2,24 @@
   text-align: center;
 }
 
+.container {
+  background-image: url(https://images.unsplash.com/photo-1504630083234-14187a9df0f5?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1650&q=80);
+  height: 100vh;
+}
+
 .login-form {
   display: flex;
   flex-direction: column;
   margin: 50px auto;
-  width: 70%;
+  width: 80%;
+  background-color: rgba(255, 255, 255, 0.6);
+  border-radius: 5px;
 }
 
-.login-button {
-  margin-top: 25px !important;
+.welcome-message {
+  font-size: 20px;
+  margin-left: 20px;
+  color: white;
 }
 
 .add-form {
@@ -18,6 +27,7 @@
   flex-direction: column;
   margin: 50px auto;
   width: 30%;
+  border-radius: 5px;
 }
 
 .add-button {
@@ -48,6 +58,10 @@ ul {
   color: gray;
 }
 
+.nav-bar {
+  margin-bottom: 20px;
+}
+
 .nav-list {
   list-style: none;
   display: flex;
@@ -55,6 +69,12 @@ ul {
 
 .nav-list-item {
   margin: auto 20px;
+  color: #164f57;
+}
+
+.button {
+  color: #164f57;
+  margin-top: 25px !important;
 }
 
 .nav-list-item:hover {
@@ -63,6 +83,7 @@ ul {
 
 .car-container {
   margin: 50px;
+  background-color: rgba(255, 255, 255, 0.4);
 }
 
 .car-paper {
