--- a/src/App.css
+++ b/src/App.css
@@ -16,6 +16,11 @@
   border-radius: 5px;
 }
 
+h3 {
+  color: #283133;
+  margin: 10px auto 10px auto;
+}
+
 .welcome-message {
   font-size: 20px;
   margin-left: 20px;
