--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,7 @@
 
 .container {
   background-image: url(https://images.unsplash.com/photo-1504630083234-14187a9df0f5?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1650&q=80);
-  height: 100vh;
+  height: 110vh;
 }
 
 .login-form {
@@ -16,15 +16,22 @@
   border-radius: 5px;
 }
 
-h3 {
+h3,
+h4 {
   color: #283133;
   margin: 10px auto 10px auto;
+}
+
+h2 {
+  color: #592825;
 }
 
 .welcome-message {
   font-size: 20px;
   margin-left: 20px;
   color: white;
+  transition: 1s;
+  left: 0;
 }
 
 .add-form {
@@ -93,4 +100,6 @@ ul {
 
 .car-paper {
   padding: 50px;
+  height: 90%;
+  padding-bottom: 50px;
 }
